tests/baselines/reference/coAndContraVariantInferences12.errors.txt
coAndContraVariantInferences12.ts(18,19): error TS2353: Object literal may only specify known properties, and 'age' does not exist in type '{ name?: string | undefined; } & ElementAttributes'.
coAndContraVariantInferences12.ts(23,18): error TS2345: Argument of type '{}' is not assignable to parameter of type '{ name: string; } & ElementAttributes'.
  Property 'name' is missing in type '{}' but required in type '{ name: string; }'.
coAndContraVariantInferences12.ts(24,20): error TS2353: Object literal may only specify known properties, and 'age' does not exist in type '{ name: string; } & ElementAttributes'.
coAndContraVariantInferences12.ts(25,18): error TS2345: Argument of type '{ idomKey: null; }' is not assignable to parameter of type '{ name: string; } & ElementAttributes'.
  Property 'name' is missing in type '{ idomKey: null; }' but required in type '{ name: string; }'.


==== coAndContraVariantInferences12.ts (4 errors) ====
    // https://github.com/microsoft/TypeScript/issues/59765
    
    type FunctionComponent<P = any> = (props: P) => Element | null;
    
    interface ElementAttributes {
      idomKey?: string | null | number;
      children?: unknown;
      skip?: boolean;
    }
    
    declare function element<P>(
      tag: FunctionComponent<P & ElementAttributes>,
      attributes: P & ElementAttributes,
    ): Element;
    
    declare function ElName(props: { name?: string }): Element;
    element(ElName, {}); // ok
    element(ElName, { age: 42 }); // error
                      ~~~
!!! error TS2353: Object literal may only specify known properties, and 'age' does not exist in type '{ name?: string | undefined; } & ElementAttributes'.
    element(ElName, { idomKey: null }); // ok
    element(ElName, { idomKey: null, name: "Trevor" }); // ok
    
    declare function ElName2(props: { name: string }): Element;
    element(ElName2, {}); // error
                     ~~
!!! error TS2345: Argument of type '{}' is not assignable to parameter of type '{ name: string; } & ElementAttributes'.
!!! error TS2345:   Property 'name' is missing in type '{}' but required in type '{ name: string; }'.
!!! related TS2728 coAndContraVariantInferences12.ts:22:35: 'name' is declared here.
    element(ElName2, { age: 42 }); // error
                       ~~~
!!! error TS2353: Object literal may only specify known properties, and 'age' does not exist in type '{ name: string; } & ElementAttributes'.
    element(ElName2, { idomKey: null }); // error
                     ~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ idomKey: null; }' is not assignable to parameter of type '{ name: string; } & ElementAttributes'.
!!! error TS2345:   Property 'name' is missing in type '{ idomKey: null; }' but required in type '{ name: string; }'.
!!! related TS2728 coAndContraVariantInferences12.ts:22:35: 'name' is declared here.
    
    declare function ElEmpty(props: {}): Element;
    element(ElEmpty, { name: "Trevor" }); // ok
    element(ElEmpty, { age: 42 }); // ok
    element(ElEmpty, { idomKey: null }); // ok
    element(ElEmpty, { idomKey: null, name: "Trevor" }); // ok
    declare const withOptionalName: { name?: string };
    element(ElEmpty, withOptionalName); // ok
    element(ElEmpty, { ...withOptionalName, idomKey: null }); // ok
    